<resources>
    <string name="app_name">RSS Reader</string>
    <string name="add_rss_button_text">Добавить</string>
    <string name="mock_description" translatable="false">Description</string>
    <string name="loading_text">Пожалуйста, подождите…</string>
    <string name="update">Обновить</string>
    <string name="details_mock_title" translatable="false">Гейб Ньюэлл: Мы много раз брались за Half-Life 3 и всегда заходили в тупик</string>
    <string name="mock_date" translatable="false">10 декабря 2023</string>


    <string name="details_mock_content" translatable="false">
        По словам Ньюэлла, Valve «не станет выпускать что-то, лишь бы выпустить что-то». Но для Half-Life благодаря «Аликс» сейчас достаточно светлое будущее: команда проекта мотивирована желанием сделать новую Half-Life.

        Сейчас, правда, этому мешает глобальная пандемия. По прикидкам главы Valve, продуктивность команды в дистанционном производстве упала на 50-75%, из-за чего Ньюэлл всерьёз обдумывает возможность как минимум временно перевести сотрудников в Новую Зеландию.

        Ньюэлл находится в стране с самого начала пандемии и уже получил там гражданство, а теперь занимается благотворительностью. Он безмерно благодарен населению страны за такой тёплый приём. В ближайшее время глава Valve намерен встретиться с вице-президентом Новой Зеландии для обсуждения открытия офиса студии в стране.
    </string>


    <string name="details_open_original">Открыть оригинал</string>
    <string name="add_first_rss_text">У вас еще нет RSS лент\nВставьте ссылку, чтобы добавить</string>
    <string name="search_rss_hint">Введите URL</string>
    <string name="search_error_parse">Проверьте, что указанная ссылка является RSS-лентой</string>
    <string name="search_error_network">Ошибка соединения с интернетом</string>
    <string name="mock_title" translatable="false">Title</string>
    <string name="empty_rss_feed">В ленте еще нет новостей</string>
    <string name="fail_get_data_text">При получении данных возникла ошибка</string>
    <string name="repeat">Повторить</string>
    <string name="menu_about_feed">Информация о ленте</string>
    <string name="menu_add_feed">Добавить ленту</string>
    <string name="menu_delete_feed">Удалить ленту</string>
    <string name="max_feeds_count_msg">Добавлено максимальное кол-вол лент</string>
    <string name="delete_alert_dialog_positive">Удалить</string>
    <string name="delete_alert_dialog_negative">Отмена</string>
    <string name="delete_alert_dialog_message">Вы действительно хотите удалить %1$s?</string>
    <string name="search_time_out_error">Превышено время ожидания</string>
    <string name="search_already_added_error">Rss лента уже добавлена</string>
    <string name="refresh_unknown_error">Неизвестная ошибка</string>
    <string name="share_ic_text">Поделиться</string>
    <string name="header_new_rss">Новая лента</string>


</resources>