<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ProgressBar
        android:id="@+id/feed_list_empty_progress"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="4dp"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/feed_list_empty_image"
        android:src="@drawable/ic_no_image"
        android:background="@drawable/bg_empty_list_image"
        android:padding="30dp"
        android:contentDescription="@string/mock_description"
        android:layout_width="166dp"
        android:layout_height="166dp"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/feed_list_empty_text"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.RSSReader.ContentText"
        android:text="@string/loading_text"/>

    <Button
        android:id="@+id/feed_list_empty_button"
        style="@style/Widget.RSSReader.Button.OutlinedButton"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        tools:visibility="visible"/>

</LinearLayout>