<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    >

        <View
            android:id="@+id/drag_capsule"
            android:layout_width="16dp"
            android:layout_height="4dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/sh_drag_capsule"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/feed_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mock_title"
            style="@style/TextAppearance.RSSReader.SemiHeaderText"
            app:layout_constraintTop_toBottomOf="@id/drag_capsule" />

        <TextView
            android:id="@+id/feed_info_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/mock_description"
            style="@style/TextAppearance.RSSReader.ContentText"
            app:layout_constraintTop_toBottomOf="@id/feed_info_title" />

        <Button
            android:id="@+id/feed_info_open_original_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/details_open_original"
            style="@style/Widget.RSSReader.Button.TextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feed_info_description" />


</androidx.constraintlayout.widget.ConstraintLayout>