<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:background="@drawable/bg_search_input_field">
            <EditText
                android:id="@+id/search_rss_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:hint="@string/search_rss_hint"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="textUri"
                style="@style/TextAppearance.RSSReader.ContentText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

        </EditText>
            <ProgressBar
            android:id="@+id/search_rss_progressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search_error_parse"
        android:textColor="#FF0000"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/search_area"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preview_area"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/error_text">

        <ImageView
            android:id="@+id/rss_item_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_no_image"
            android:background="@drawable/bg_details_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/mock_description" />

        <TextView
            android:id="@+id/rss_item_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/mock_title"
            android:maxLines="2"
            android:ellipsize="end"
            style="@style/TextAppearance.RSSReader.MainText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rss_item_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rss_item_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:text="@string/mock_description"
            android:maxLines="2"
            android:ellipsize="end"
            style="@style/TextAppearance.RSSReader.SecondText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rss_item_image"
            app:layout_constraintTop_toBottomOf="@+id/rss_item_title_text" />


        <Button
            android:id="@+id/add_to_feed_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_rss_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rss_item_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</merge>