<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/feed_item_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginVertical="13dp"
        android:src="@drawable/ic_no_image"
        android:background="@drawable/bg_details_image"
        android:scaleType="centerCrop"
        android:contentDescription="@string/mock_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feed_item_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/mock_title"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="13dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/feed_item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feed_item_description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/mock_description"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="8dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/feed_item_image"
        app:layout_constraintTop_toBottomOf="@+id/feed_item_title_text" />

    <TextView
        android:id="@+id/feed_item_date_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mock_date"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/feed_item_image"
        app:layout_constraintTop_toBottomOf="@+id/feed_item_description_text" />

</androidx.constraintlayout.widget.ConstraintLayout>